# PicoIDE

./: main.py  note.md  pyproject.toml
app/: db.py  main.py  pyproject.toml  schema_service.py  services.py
app/engine/: engine.py
app/flow/: __init__.py  block.py  compute.py  engine.py  manager.py
app/flow/block/: __init__.py  base.py  prepare.py
app/flow/compute/: __init__.py  engine.py
app/flow/schema/: __init__.py  manage.py  types.py
app/flow1/: __init__.py  block_builder.py  component.py  compute_engine.py
app/flow2/: __init__.py
app/flow2/block/: __init__.py
app/flow2/compute/: __init__.py  base.py
app/flow2/schema/: __init__.py  manage.py  types.py
app/node/: block.py  blocks_daq.py  compute_engine.py  daq.py  daq2.py  engine.py  engine1.py  engine2.py  output_manager.py  performance.py  run.py
app/routes/: blocks.py  flow.py  flow2.py  schemas.py  vfs.py
app/utils/: singleton.py
block/: README.md  package.json  tsconfig.app.json  vite.config.ts
block/public/: tinycode.html
block/src/: App.vue
block/src/components/: HelloWorld.vue  TheWelcome.vue
block/src/views/: SchemaManagerExample.vue  SingleNodeFlow.vue  TinyCode.vue
web/: index.html  note.md  package-lock.json  package.json  product.json  tsconfig.app.json
web-code/: index.html
web-code/vfs-extension/: package.nls.json
web/public/: product.json
web/public/vfs-extension/: main.js  nls.metadata.json  package.json
web/src/: App.vue
web/src/api/: blocks.ts  flow.ts  index.ts  request.ts  schemas.ts
web/src/components/: OutputPanel.vue
web/src/utils/: toast.ts
web/src/views/: NodeFlowDemo.vue  SchemaManagerApiDemo.vue  SchemaManagerDemo.vue  TinyCode.vue
web/vfs-extension/: main.js
(+16 files in other folders)
