[project]
name = "tinycode"
version = "0.1.0"
description = ""
authors = [
    {name = "mini kk",email = "kanbang@163.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "tortoise-orm (>=0.21.0,<0.22.0)",
    "aiosqlite (>=0.20.0,<0.21.0)",
    "numpy (==2.2.4)",
    "networkx (==3.4.2)",
    "debugpy (>=1.8.19,<2.0.0)",
    "cachetools (>=6.2.4,<7.0.0)"
]


[[tool.poetry.source]]
name = "tsinghua-source"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false